fixed alignment issue, flex was the culprit apparently

--- a/assets/css/books.css
+++ b/assets/css/books.css
@@ -157,7 +157,16 @@ main {
 /*  border: 2px solid var(--accent-border); */
   border-radius: 10px;
   flex: 1;
-  overflow-y: auto;
+  overflow-y: auto; /* Keep scolling enabled */
+
+  /* Hide scrollbars for Firefox */
+  scrollbar-width: none;
+  -ms-overflow-style: none; /* Hide scrollbar in IE 10+ */
+}
+
+/* Hide scrollbars for Chrome, Safari, and Opera */
+main::-webkit-scrollbar {
+  display: none;
 }
 
 main h1 {
@@ -276,7 +285,6 @@ footer {
 .book-item {
   margin: 0;
   background-color: #111;
-  display: flex;
   flex-wrap: wrap;
   gap: 1em;
   align-items: flex-start;
@@ -302,7 +310,7 @@ footer {
   display: inline-block;
   max-width: 100px;
   height: auto;
-  border: 1px solid var(--accent-border);
+/*  border: 1px solid var(--accent-border); */
   border-radius: 5px;
   margin: 0;
 }
